--- a/src-front/templates/administracni-vrstva/administrace.html
+++ b/src-front/templates/administracni-vrstva/administrace.html
@@ -31,13 +31,13 @@
     <div class="page multi-page">
         <header class="multi-page-header">
             <!-- TODO: třídu "active" nastavit aktivní kartě -->
-            <a class="page-tab" href="#">Uživatelé</a>
-            <a class="page-tab active" href="#">Třídy</a>
+            <a class="page-tab active" href="#">Uživatelé</a>
+            <a class="page-tab" href="#">Třídy</a>
         </header>
 
         <!-- Uživatelé -->
         <!-- TODO: hide nastavit neaktivní podstránce -->
-        <section class="multi-page-content hide">
+        <section class="multi-page-content">
             <table class="admin-list users">
                 <tr class="data-row classic">
                     <td class="rank user-i"></td>
@@ -51,9 +51,11 @@
                         <span class="short">12&nbsp;%</span>
                     </td>
                     <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
+                        <div class="actions-container">
+                            <i class="change-to-admin-i"></i>
+                            <i class="clear-files-i"></i>
+                            <i class="delete-user-i"></i>
+                        </div>
                     </td>
                 </tr>
                 <tr class="data-row mobile">
@@ -62,7 +64,7 @@
                     <td><!-- --></td>
                 </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
+                <tr class="line-row"><td colspan="5"><hr class="line" /></td></tr>
 
                 <tr class="data-row classic">
                     <td class="rank user-i"></td>
@@ -76,9 +78,11 @@
                         <span class="short">8&nbsp;%</span>
                     </td>
                     <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
+                        <div class="actions-container">
+                            <i class="change-to-admin-i"></i>
+                            <i class="clear-files-i"></i>
+                            <i class="delete-user-i"></i>
+                        </div>
                     </td>
                 </tr>
                 <tr class="data-row mobile">
@@ -87,7 +91,7 @@
                     <td><!-- --></td>
                 </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
+                <tr class="line-row"><td colspan="5"><hr class="line" /></td></tr>
 
                 <tr class="data-row classic">
                     <td class="rank user-i"></td>
@@ -101,9 +105,11 @@
                         <span class="short">24&nbsp;%</span>
                     </td>
                     <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
+                        <div class="actions-container">
+                            <i class="change-to-admin-i"></i>
+                            <i class="clear-files-i"></i>
+                            <i class="delete-user-i"></i>
+                        </div>
                     </td>
                 </tr>
                 <tr class="data-row mobile">
@@ -112,7 +118,7 @@
                     <td><!-- --></td>
                 </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
+                <tr class="line-row"><td colspan="5"><hr class="line" /></td></tr>
 
                 <tr class="data-row classic">
                     <td class="rank user-i"></td>
@@ -126,9 +132,11 @@
                         <span class="short">25&nbsp;%</span>
                     </td>
                     <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
+                        <div class="actions-container">
+                            <i class="change-to-admin-i"></i>
+                            <i class="clear-files-i"></i>
+                            <i class="delete-user-i"></i>
+                        </div>
                     </td>
                 </tr>
                 <tr class="data-row mobile">
@@ -137,7 +145,7 @@
                     <td><!-- --></td>
                 </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
+                <tr class="line-row"><td colspan="5"><hr class="line" /></td></tr>
 
                 <tr class="data-row classic">
                     <td class="rank admin-i"></td>
@@ -151,9 +159,11 @@
                         <span class="short">100&nbsp;%</span>
                     </td>
                     <td class="actions">
-                        <i class="change-to-user-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
+                        <div class="actions-container">
+                            <i class="change-to-admin-i"></i>
+                            <i class="clear-files-i"></i>
+                            <i class="delete-user-i"></i>
+                        </div>
                     </td>
                 </tr>
                 <tr class="data-row mobile">
@@ -165,7 +175,7 @@
         </section>
 
         <!-- Třídy -->
-        <section class="multi-page-content">
+        <section class="multi-page-content hide">
             <table class="admin-list classes">
                 <tr class="data-row classic">
                     <td class="school">Obchodní akademie Chrudim</td>
