--- a/src/views/Admin/main-page.latte
+++ b/src/views/Admin/main-page.latte
@@ -10,128 +10,38 @@
         {* Users *}
         <section class="multi-page-content _tab-page" data-id="users">
             <table class="admin-list users">
-                <tr class="data-row classic">
-                    <td class="rank user-i"></td>
-                    <td class="username">
-                        <span class="classic">Veronika Zemanová</span>
-                        <span class="short">V. Zemanová</span>
-                    </td>
-                    <td class="email">zemanova@seznam.cz</td>
-                    <td class="quota-usage">
-                        <span class="full">12/100 MB <small class="percentage">(12&nbsp;%)</small></span>
-                        <span class="short">12&nbsp;%</span>
-                    </td>
-                    <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td>{* *}</td>
-                    <td class="email" colspan="2">zemanova@seznam.cz</td>
-                    <td>{* *}</td>
-                </tr>
+                <tbody id="_users-container">
+                {foreach $systemUsers as $item}
+                    {var $systemUser = $item['user']}
+                    {var $quotaUsage = $item['quota']}
+                    <tr class="data-row classic _user" data-id="{$systemUser->getId()}">
+                        <td n:class="_rank, rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? admin-i : user-i"></td>
+                        <td class="username">
+                            <span class="classic">{$systemUser->getData()->getFullname()}</span>
+                            <span class="short">{$systemUser->getData()->getShortName()}</span>
+                        </td>
+                        <td class="email">{$systemUser->getData()->getEmail()}</td>
+                        <td class="quota-usage">
+                            <span class="full"><span class="_used-quota">{$quotaUsage['absolute']}</span>/{$quotaUsage['limit']|noescape} <small class="percentage">(<span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%)</small></span>
+                            <span class="short"><span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%</span>
+                        </td>
+                        <td class="actions">
+                            <div class="actions-container">
+                                <i n:class="_change-rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? change-to-user-i : change-to-admin-i" data-id="{$systemUser->getId()}"></i>
+                                <i class="clear-files-i _delete-files" data-id="{$systemUser->getId()}"></i>
+                                <i class="delete-user-i _delete-user" data-id="{$systemUser->getId()}" data-line="{$iterator->first ? 1 : $iterator->counter - 1}"></i>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="data-row mobile _user" data-id="{$systemUser->getId()}">
+                        <td>{* *}</td>
+                        <td class="email" colspan="2">{$systemUser->getData()->getEmail()}</td>
+                        <td>{* *}</td>
+                    </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="rank user-i"></td>
-                    <td class="username">
-                        <span class="classic">Eliška Starostová</span>
-                        <span class="short">E. Starostová</span>
-                    </td>
-                    <td class="email">starostova@seznam.cz</td>
-                    <td class="quota-usage">
-                        <span class="full">8/100 MB <small class="percentage">(8&nbsp;%)</small></span>
-                        <span class="short">8&nbsp;%</span>
-                    </td>
-                    <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td>{* *}</td>
-                    <td class="email" colspan="2">starostova@seznam.cz</td>
-                    <td>{* *}</td>
-                </tr>
-
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="rank user-i"></td>
-                    <td class="username">
-                        <span class="classic">Adéla Vyhnálková</span>
-                        <span class="short">A. Vyhnálková</span>
-                    </td>
-                    <td class="email">vyhnalkova@seznam.cz</td>
-                    <td class="quota-usage">
-                        <span class="full">24/100 MB <small class="percentage">(24&nbsp;%)</small></span>
-                        <span class="short">24&nbsp;%</span>
-                    </td>
-                    <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td>{* *}</td>
-                    <td class="email" colspan="2">vyhnalkova@seznam.cz</td>
-                    <td>{* *}</td>
-                </tr>
-
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="rank user-i"></td>
-                    <td class="username">
-                        <span class="classic">Lukáš Kříž</span>
-                        <span class="short">L. Kříž</span>
-                    </td>
-                    <td class="email">kriz@seznam.cz</td>
-                    <td class="quota-usage">
-                        <span class="full">25/100 MB <small class="percentage">(25&nbsp;%)</small></span>
-                        <span class="short">25&nbsp;%</span>
-                    </td>
-                    <td class="actions">
-                        <i class="change-to-admin-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td>{* *}</td>
-                    <td class="email" colspan="2">kriz@seznam.cz</td>
-                    <td>{* *}</td>
-                </tr>
-
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="rank admin-i"></td>
-                    <td class="username">
-                        <span class="classic">Michal Šmahel</span>
-                        <span class="short">M. Šmahel</span>
-                    </td>
-                    <td class="email">smahel@seznam.cz</td>
-                    <td class="quota-usage">
-                        <span class="full">100/100 MB <small class="percentage">(100&nbsp;%)</small></span>
-                        <span class="short">100&nbsp;%</span>
-                    </td>
-                    <td class="actions">
-                        <i class="change-to-user-i"></i>
-                        <i class="clear-files-i"></i>
-                        <i class="delete-user-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td>{* *}</td>
-                    <td class="email" colspan="2">smahel@seznam.cz</td>
-                    <td>{* *}</td>
-                </tr>
+                    <tr n:if="!$iterator->last" class="line-row _line" data-id="{$iterator->counter}"><td colspan="5"><hr class="line" /></td></tr>
+                {/foreach}
+                </tbody>
             </table>
         </section>
 
@@ -201,6 +111,7 @@
 {/block}
 
 {block js}
-<script src="js/classes/TabController.js"></script>
-<script src="js/admin/main-page.js"></script>
+<script src="/js/classes/TabController.js"></script>
+<script src="/js/classes/UserController.js"></script>
+<script src="/js/admin/main-page.js"></script>
 {/block}
