--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -6929,6 +6929,11 @@ body.active-alert {
 .admin-list.users .data-row.classic .quota-usage {
   border-right: 2px solid #EEE9E5;
 }
+@media screen and (min-width: 945px) {
+  .admin-list.users .data-row.classic .quota-usage {
+    border-right: none;
+  }
+}
 .admin-list.users .data-row.classic .quota-usage .full {
   display: none;
 }
@@ -6944,8 +6949,11 @@ body.active-alert {
   }
 }
 .admin-list.users .data-row.classic .actions {
+  width: 4.4em;
+}
+.admin-list.users .data-row.classic .actions .actions-container {
   display: grid;
-  grid-template-columns: 1.6em 1.2em 1.1em;
+  grid-template-columns: 1.6em 1.2em 1.3em;
 }
 @media screen and (min-width: 945px) {
   .admin-list.users .data-row.mobile {
