--- a/src/views/Admin/main-page.latte
+++ b/src/views/Admin/main-page.latte
@@ -10,37 +10,35 @@
         {* Users *}
         <section class="multi-page-content _tab-page" data-id="users">
             <table class="admin-list users">
-                <tbody id="_users-container">
-                {foreach $systemUsers as $item}
-                    {var $systemUser = $item['user']}
-                    {var $quotaUsage = $item['quota']}
-                    <tr class="data-row classic _user" data-id="{$systemUser->getId()}">
-                        <td n:class="_rank, rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? admin-i : user-i"></td>
-                        <td class="username">
-                            <span class="classic">{$systemUser->getData()->getFullname()}</span>
-                            <span class="short">{$systemUser->getData()->getShortName()}</span>
-                        </td>
-                        <td class="email">{$systemUser->getData()->getEmail()}</td>
-                        <td class="quota-usage">
-                            <span class="full"><span class="_used-quota">{$quotaUsage['absolute']}</span>/{$quotaUsage['limit']|noescape} <small class="percentage">(<span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%)</small></span>
-                            <span class="short"><span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%</span>
-                        </td>
-                        <td class="actions">
-                            <div class="actions-container">
-                                <i n:class="_change-rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? change-to-user-i : change-to-admin-i" data-id="{$systemUser->getId()}"></i>
-                                <i class="clear-files-i _delete-files" data-id="{$systemUser->getId()}"></i>
-                                <i class="delete-user-i _delete-user" data-id="{$systemUser->getId()}" data-line="{$iterator->first ? 1 : $iterator->counter - 1}"></i>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class="data-row mobile _user" data-id="{$systemUser->getId()}">
-                        <td>{* *}</td>
-                        <td class="email" colspan="2">{$systemUser->getData()->getEmail()}</td>
-                        <td>{* *}</td>
-                    </tr>
+                <tbody n:inner-foreach="$systemUsers as $item" id="_users-container">
+                {var $systemUser = $item['user']}
+                {var $quotaUsage = $item['quota']}
+                <tr class="data-row classic _user" data-id="{$systemUser->getId()}">
+                    <td n:class="_rank, rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? admin-i : user-i"></td>
+                    <td class="username">
+                        <span class="classic">{$systemUser->getData()->getFullname()}</span>
+                        <span class="short">{$systemUser->getData()->getShortName()}</span>
+                    </td>
+                    <td class="email">{$systemUser->getData()->getEmail()}</td>
+                    <td class="quota-usage">
+                        <span class="full"><span class="_used-quota">{$quotaUsage['absolute']}</span>/{$quotaUsage['limit']|noescape} <small class="percentage">(<span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%)</small></span>
+                        <span class="short"><span class="_quota-percentage">{$quotaUsage['relative']}</span>&nbsp;%</span>
+                    </td>
+                    <td class="actions">
+                        <div class="actions-container">
+                            <i n:class="_change-rank, $systemUser->getRank()->getPermissionLevel() === App\Entity\Rank::ADMIN ? change-to-user-i : change-to-admin-i" data-id="{$systemUser->getId()}"></i>
+                            <i class="clear-files-i _delete-files" data-id="{$systemUser->getId()}"></i>
+                            <i class="delete-user-i _delete-user" data-id="{$systemUser->getId()}" data-line="{$iterator->first ? 1 : $iterator->counter - 1}"></i>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="data-row mobile _user" data-id="{$systemUser->getId()}">
+                    <td>{* *}</td>
+                    <td class="email" colspan="2">{$systemUser->getData()->getEmail()}</td>
+                    <td>{* *}</td>
+                </tr>
 
-                    <tr n:if="!$iterator->last" class="line-row _line" data-id="{$iterator->counter}"><td colspan="5"><hr class="line" /></td></tr>
-                {/foreach}
+                <tr n:if="!$iterator->last" class="line-row _line" data-id="{$iterator->counter}"><td colspan="5"><hr class="line" /></td></tr>
                 </tbody>
             </table>
         </section>
@@ -48,63 +46,22 @@
         {* Classes *}
         <section class="multi-page-content _tab-page hide" data-id="classes">
             <table class="admin-list classes">
-                <tr class="data-row classic">
-                    <td class="school">Obchodní akademie Chrudim</td>
-                    <td class="class-name">1.C</td>
-                    <td class="start-year">od&nbsp;2019</td>
+                <tbody n:inner-foreach="$classes as $class" id="_classes-container">
+                <tr class="data-row classic _class" data-id="{$class->getId()}">
+                    <td class="school">{$class->getSchool()->getName()}</td>
+                    <td class="class-name">{$class->getName()}</td>
+                    <td class="start-year">od&nbsp;{$class->getStartYear()}</td>
                     <td class="actions">
-                        <i class="delete-cross-i"></i>
+                        <i class="delete-cross-i _delete-class" data-id="{$class->getId()}" data-line="{$iterator->first ? 1 : $iterator->counter - 1}"></i>
                     </td>
                 </tr>
-                <tr class="data-row mobile">
-                    <td class="class-info">1.C od 2019</td>
+                <tr class="data-row mobile _class" data-id="{$class->getId()}">
+                    <td class="class-info">{$class->getName()} od {$class->getStartYear()}</td>
                     <td>{* *}</td>
                 </tr>
 
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="school">Střední uměleckoprůmyslová škola Jihlava-Helenín</td>
-                    <td class="class-name">4.E</td>
-                    <td class="start-year">od&nbsp;2016</td>
-                    <td class="actions">
-                        <i class="delete-cross-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td class="class-info">4.E od 2016</td>
-                    <td>{* *}</td>
-                </tr>
-
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="school">Vyšší odborná škola zdravotnická a Střední odborná škola Jihlava</td>
-                    <td class="class-name">3.C</td>
-                    <td class="start-year">od&nbsp;2017</td>
-                    <td class="actions">
-                        <i class="delete-cross-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td class="class-info">3.C od 2017</td>
-                    <td>{* *}</td>
-                </tr>
-
-                <tr class="line-row"><td colspan="4"><hr class="line" /></td></tr>
-
-                <tr class="data-row classic">
-                    <td class="school">Střední průmyslová škola elektrotechnická a Vyšší odborná škola Pardubice</td>
-                    <td class="class-name">4.F</td>
-                    <td class="start-year">od&nbsp;2016</td>
-                    <td class="actions">
-                        <i class="delete-cross-i"></i>
-                    </td>
-                </tr>
-                <tr class="data-row mobile">
-                    <td class="class-info">4.F od 2016</td>
-                    <td>{* *}</td>
-                </tr>
+                <tr n:if="!$iterator->last" class="line-row _line" data-id="{$iterator->counter}"><td colspan="4"><hr class="line" /></td></tr>
+                </tbody>
             </table>
         </section>
     </div>
@@ -113,5 +70,6 @@
 {block js}
 <script src="/js/classes/TabController.js"></script>
 <script src="/js/classes/UserController.js"></script>
+<script src="/js/classes/ClassController.js"></script>
 <script src="/js/admin/main-page.js"></script>
 {/block}
