Profil tridy - skupiny, opravy jiz hotovych casti kodu

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -275,6 +275,10 @@
 .delete-cross-i {
   .icon(@fa-var-times, "r");
 }
+
+.delete-full-i {
+  .icon(@fa-var-trash-alt, "s");
+}
 // END profily
 
 
