--- a/src-front/less/layout/_menus.less
+++ b/src-front/less/layout/_menus.less
@@ -4,7 +4,7 @@
   border-bottom: 4px solid @header-bg;
   position: absolute;
   width: 100%;
-  z-index: @menu-zi;
+  z-index: @main-menu-zi;
 
   @media screen and (min-width: @big-tablet) {
     position: initial;
