--- a/src-front/less/utils/vars/_z-index.less
+++ b/src-front/less/utils/vars/_z-index.less
@@ -1,7 +1,8 @@
 // Nejvyssi je 10 -> prekryvani obsahu (vyskakovaci hlasky apod.) -> obsah má samozřejmě ještě o 1 vyšší
-// Potom je 9 -> menu
+// Potom je 9 a 8 -> hlavní menu + obyčejná méně významná menu
 // Zbytek je dle potreby
 @alert-box-zi: 11;
 @alert-zi: 10;
-@menu-zi: 9;
-@mini-alert-zi: 8;
+@main-menu-zi: 9;
+@menu-zi: 8;
+@mini-alert-zi: 7;
