--- a/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
+++ b/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
@@ -73,6 +73,22 @@
                     <i class="graduation-cap-p-i icon" style="color: #F3D452; background: #84ADAA;"></i>
 
                     <i class="palette-i action"></i>
+
+                    <!-- TODO To open color picker remove class "hide" -->
+                    <!-- TODO: For every div.profile-icon, generate id and for with iterator (for ex. icon-1, icon-2, ...) -->
+                    <form class="color-picker">
+                        <label for="icon-1" class="target">
+                            <span class="name">ikonka</span>
+                            <span class="color" style="background: #F3D452;"></span>
+                        </label>
+                        <input type="color" name="icon-color" class="form-input" id="icon-1" />
+
+                        <label for="background-1" class="target">
+                            <span class="name">pozadí</span>
+                            <span class="color" style="background: #84ADAA;"></span>
+                        </label>
+                        <input type="color" name="background-color" class="form-input" id="background-1" />
+                    </form>
                 </div>
                 <div class="profile-icon">
                     <i class="hat-cowboy-p-i icon"></i>
